--- a/style.css
+++ b/style.css
@@ -20,3 +20,29 @@
   padding: 15px;
   border: 1px solid black;
 }
+
+@media only screen and (max-width: 768px) {
+  /* For mobile phones: */
+  body {
+    background-color: black;
+    font-style: normal;
+    color: green;
+  }
+  .header {
+    border: 1px solid white;
+    padding: 15px;
+  }
+  .menu {
+    width: 100%;
+    float: left;
+    padding: 15px;
+    border: 1px solid white;
+  }
+
+  .main {
+    width: 100%;
+    float: left;
+    padding: 15px;
+    border: 1px solid white;
+  }
+}
